# shadow-portfolio

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  debugger.md  security-auditor.md  test-runner.md
.claude/commands/: commit.md  pr.md  refactor.md
.claude/skills/: lint-error-fixer.md
.cursor/: BUGBOT.md  hooks.json
.cursor/agents/: code-reviewer.md  debugger.md  security-auditor.md  test-runner.md
.cursor/commands/: commit.md  pr.md
.cursor/commands/commit/: COMMAND.md
.cursor/commands/refactor/: COMMAND.md
.cursor/rules/: agent-logic.mdc  general.mdc  python-style.mdc  testing.mdc
.cursor/skills/lint-error-fixer/: SKILL.md
.github/templates/: PULL_REQUEST_TEMPLATE.md
.github/templates/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml  test.yaml
portfolio/: main.py
portfolio/api/: routes.py
portfolio/api/v1/: health.py  resume.py  routes.py  runs.py  trade.py
portfolio/config/: constants.py  logging.py  settings.py
portfolio/research/: __init__.py  aggregator.py  base.py  fundamentals.py  indicators.py  metrics.py  news.py  profile.py
portfolio/schemas/: health.py  runs.py  trade.py
portfolio/services/: trade.py
portfolio/services/sampler/: __init__.py  base.py  simple.py
tests/: main_test.py  test_main.py
